# dbwebconnect

./: .gitignore  Cargo.toml  Dockerfile  datageneric.csv  docker-compose.yml  examplecol.csv
.github/workflows/: rust.yml
data/: data.csv  datageneric.csv  examplecol.csv
docker/: Dockerfile  init.sql
src/: connkey.rs  createdatabase.rs  createrecord.rs  createrelationship.rs  dbconnect.rs  delete.rs  getfields.rs  index.html  initconnect.rs  insertrecords.rs  main.rs  page.html  pushdata.rs  querytable.rs  relationships.rs  tablecreate.rs  update.rs
src/createrecord/: generateform.rs
src/pages/: insert.html  methodsuccess.html  mystyle.css  query.html
src/pushdata/: createtablestruct.rs  gettablecol.rs
src/querytable/: displayquery.rs
tmp/: dbconnection.txt
tmp/data/: datageneric.csv  examplecolunique.csv
tmp/kylelocal/: dbconnection.txt
tmp/relation/: testrelat.csv
