[package]
name = "dbwebconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
mysql = { version = "*", default-features = false, features = ["minimal", "rustls-tls"] }
mysql_common = { version = "*", default-features = false, features = ["bigdecimal03", "time03", "uuid"]}
csv="1.1"
clap = { version = "4.0", features = ["derive"] }
transpose = "0.2.2"
