[package]
name = "dbwebconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-session = {version="0.7.2",features = ["redis-actor-session"]}
actix-identity = "0.2.0" 
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
mysql = { version = "*", default-features = false, features = ["minimal", "rustls-tls"] }
mysql_common = { version = "*", default-features = false, features = ["bigdecimal03", "time03", "uuid"]}
csv="1.1"
clap = { version = "4.0", features = ["derive"] }
actix-multipart = "0.6.0"
sanitize-filename = "0.4"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.28"
log = "0.4.17"
rand = "0.8.4"
